--- a/src/data/projects.json
+++ b/src/data/projects.json
@@ -19,9 +19,6 @@
         },
         {
             "title": "Loggregator",
-            "statistics": {
-                "released": "newly"
-            },
             "description": "Store, view, & search your logs. That's it. Nothing complicated, only what you need.",
             "tags": [
                 "TypeScript",
@@ -35,9 +32,6 @@
         },
         {
             "title": "Evalx.sh",
-            "statistics": {
-                "progress": ""
-            },
             "description": "Code. Post. Done. You give us your code, we take care of running it. You focus on what matters, building great applications.",
             "tags": [
                 "TypeScript",
@@ -65,6 +59,137 @@
             "links": {
                 "github": "https://github.com/zaida04/guilded.js",
                 "website": "https://guilded.js.org"
+            }
+        }
+    ],
+    "backends": [
+        {
+            "title": "Guilded Shields",
+            "description": "A service for generating SVG shields for your guilded.gg server.",
+            "tags": [
+                "TypeScript",
+                "Bun",
+                "HTTP"
+            ],
+            "links": {
+                "github": "https://github.com/yoki-labs/guilded-shields",
+                "website": "https://shields.yoki-labs.xyz/"
+            }
+        },
+        {
+            "title": "Events Proxy",
+            "description": "A service for proxying guilded WS events to HTTP servers. Allows you to build your bots in a serverless environment.",
+            "tags": [
+                "TypeScript",
+                "Node.JS",
+                "WebSocket",
+                "HTTP"
+            ],
+            "links": {
+                "github": "https://github.com/zaida04/events-proxy"
+            }
+        },
+        {
+            "title": "Voicechat Moderator",
+            "description": "A Discord bot that gives you piece of mind knowing you are free from obnoxious intrusions in your Discord voice channel.",
+            "tags": [
+                "TypeScript",
+                "Node.JS",
+                "Discord.JS",
+                "WebSocket",
+                "HTTP"
+            ],
+            "links": {
+                "github": "https://github.com/zaida04/voicechat-moderator"
+            }
+        },
+        {
+            "title": "Sharex Host",
+            "description": "A simple image host for ShareX. Supports uploading and serving images.",
+            "tags": [
+                "TypeScript",
+                "Bun",
+                "HTTP"
+            ],
+            "links": {
+                "github": "https://github.com/zaida04/sharex-host"
+            }
+        },
+        {
+            "title": "Webhook Runner",
+            "description": "A simple webhook runner. Supports running webhooks on your server from a github action.",
+            "tags": [
+                "TypeScript",
+                "Bun",
+                "HTTP"
+            ],
+            "links": {
+                "github": "https://github.com/zaida04/webhook-runer"
+            }
+        }
+    ],
+    "libraries": [
+        {
+            "title": "Guilded.JS",
+            "statistics": {
+                "downloads": "13,000+",
+                "stars": "67"
+            },
+            "description": "Tools for creating bots with the guilded.gg bot API. Usable in either JavaScript or TypeScript projects.",
+            "tags": [
+                "TypeScript",
+                "Node.JS",
+                "WebSocket",
+                "HTTP"
+            ],
+            "links": {
+                "github": "https://github.com/zaida04/guilded.js",
+                "website": "https://guilded.js.org"
+            }
+        },
+        {
+            "title": "Loggregator Adapters",
+            "description": "Adapters for the Loggregator API. Allows you to send logs to Loggregator from your application.",
+            "tags": [
+                "TypeScript",
+                "Node.JS",
+                "HTTP"
+            ],
+            "links": {
+                "github": "https://github.com/zaida04/loggregator-adapters"
+            }
+        },
+        {
+            "title": "Tomlenv",
+            "description": "Read and inject environment variables from a .toml file in Node.JS. Inspired by dotenv.",
+            "tags": [
+                "Node.JS"
+            ],
+            "links": {
+                "github": "https://github.com/zaida04/tomlenv"
+            }
+        },
+        {
+            "title": "Config Converter",
+            "description": "Convert your config files from JS to JSON or vice-versa.",
+            "tags": [
+                "Node.JS"
+            ],
+            "links": {
+                "github": "https://github.com/zaida04/config-convert"
+            }
+        },
+        {
+            "title": "Quizziz.js",
+            "statistics": {
+                "stars": "9"
+            },
+            "description": "A simple wrapper for the Quizziz API.",
+            "tags": [
+                "Node.JS"
+            ],
+            "links": {
+                "github": "https://github.com/zaida04/quizizz.js"
             }
         }
     ]
