--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "luxon": "^3.4.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-modern-drawer": "^1.2.2",
     "reading-time": "^1.5.0",
     "tailwind-merge": "^2.2.0",
     "tailwindcss": "^3.4.1",
