--- a/package.json
+++ b/package.json
@@ -14,21 +14,20 @@
     "@astrojs/mdx": "^2.0.5",
     "@astrojs/react": "^3.0.9",
     "@astrojs/tailwind": "^5.1.0",
-    "@types/react": "^18.2.48",
-    "@types/react-dom": "^18.2.18",
     "astro": "^4.2.1",
     "clsx": "^2.1.0",
     "lucide-react": "^0.312.0",
     "luxon": "^3.4.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-modern-drawer": "^1.2.2",
     "reading-time": "^1.5.0",
-    "tailwind-merge": "^2.2.0",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5.3.3"
+    "tailwind-merge": "^2.2.0"
   },
   "devDependencies": {
-    "@types/luxon": "^3.4.2"
+    "@types/luxon": "^3.4.2",
+    "@types/react": "^18.2.48",
+    "@types/react-dom": "^18.2.18",
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5.3.3"
   }
 }
