chore: no format for now

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,8 +16,8 @@ jobs:
       - name: Install dependencies
         run: bun install
 
-      - name: Run lint/format
-        run: bun run check
+      # - name: Run lint/format
+      #   run: bun run check
 
       - name: Run typecheck
         run: bun run typecheck
