--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,4 +20,4 @@ jobs:
       #   run: bun run check
 
       - name: Run typecheck
-        run: bun run typecheck
+        run: bun astro check && bun run typecheck && bun astro build
