--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "luxon": "^3.4.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.51.5",
     "reading-time": "^1.5.0",
     "tailwind-merge": "^2.2.0"
   },
