--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@astrojs/mdx": "^2.0.5",
     "@astrojs/react": "^3.0.9",
     "@astrojs/tailwind": "^5.1.0",
+    "@astrojs/vercel": "^7.6.0",
     "astro": "^4.2.1",
     "clsx": "^2.1.0",
     "lucide-react": "^0.312.0",
