--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@astrojs/react": "^3.0.9",
     "@astrojs/tailwind": "^5.1.0",
     "@astrojs/vercel": "^7.6.0",
+    "@upstash/ratelimit": "^1.1.3",
+    "@upstash/redis": "^1.31.3",
     "astro": "^4.2.1",
     "clsx": "^2.1.0",
     "lucide-react": "^0.312.0",
