--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   },
   "devDependencies": {
     "@types/luxon": "^3.4.2",
+    "@types/node": "^20.14.2",
     "@types/react": "^18.2.48",
     "@types/react-dom": "^18.2.18",
     "tailwindcss": "^3.4.1",
