--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.5",
+    "react-type-animation": "^3.2.0",
     "reading-time": "^1.5.0",
     "tailwind-merge": "^2.2.0"
   },
