--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@astrojs/vercel": "^7.6.0",
     "@upstash/ratelimit": "^1.1.3",
     "@upstash/redis": "^1.31.3",
+    "@vercel/analytics": "^1.5.0",
     "astro": "^4.2.1",
     "clsx": "^2.1.0",
     "lucide-react": "^0.312.0",
